update for newest tag

--- a/history
+++ b/history
@@ -9,6 +9,7 @@
    * fix prompt photons with momther PID = -999 always
    * add vertex of primary vertex
    * rename mcVtx_x, mcVtx_y and mcVtx_z to mcVtx, mcVty and mcVtz
+   * only compute generator level isolations for photons and leptons to save CPU time
 
 * V07-04-02-03
    * change electron and photon ID from 64-bit to 8-bit 
