update to newest version

--- a/history
+++ b/history
@@ -1,11 +1,11 @@
-* V07-04-02-04
+* V07-04-05-00
    * using seletedPatJetsAK4PFCHS instead of just selectedPatJets
    * add 50ns HLT information
    * add a flag to determine whether users want to dump photons or not (default : dump photons)
    * merge 74X MC status flag and decay type to the same variable (mcStatusFlag)
    * add 74X MC status flags (fromHardProcessFinalState, isPromptDecayed, fromHardProcessBeforeFSR)
    * store FSR photons (radiated off leptons) without any pt cut
-   * only store W/Z/H with fromHardProcessBeforeFSR == true
+   * only store W/Z/H/b/t with fromHardProcessBeforeFSR == true
    * fix prompt photons with momther PID = -999 always
    * add vertex of primary vertex
    * rename mcVtx_x, mcVtx_y and mcVtx_z to mcVtx, mcVty and mcVtz
