update to newest version

--- a/history
+++ b/history
@@ -10,6 +10,7 @@
    * add vertex of primary vertex
    * rename mcVtx_x, mcVtx_y and mcVtx_z to mcVtx, mcVty and mcVtz
    * only compute generator level isolations for photons and leptons to save CPU time
+   * remove useless 2nd BC variables 
 
 * V07-04-02-03
    * change electron and photon ID from 64-bit to 8-bit 
