--- a/history
+++ b/history
@@ -1,3 +1,9 @@
+* V07-04-05-04
+   * add energy of two preshower planes for energy regression
+   * add single photon 165 GeV trigger matching
+   * fix HLT decisions
+   * change nVtx to the total number of reconstructed vertices instead of number of good vertices
+
 * V07-04-05-03
    * fix missing photon isolations when running on miniAOD
    * add event weight 
