--- a/history
+++ b/history
@@ -9,6 +9,9 @@
    * add muon energy
    * add 25 ns triggers
    * add PU jet ID
+   * add jet variables for JEC
+   * add JEC uncertainty
+   * set jet pt threshold to 10 GeV for AOD
 
 * V07-04-05-05
    * fix the problem of PF photon and NH isolation for photons
