update to newest version

--- a/history
+++ b/history
@@ -1,3 +1,6 @@
+* V07-04-09-01
+   * use the right sqlite file for data
+
 * V07-04-09-00
    * add MET filters
    * add MET correction and uncertainties
