--- a/history
+++ b/history
@@ -1,5 +1,5 @@
 * V07-04-09-02
-   * fix nJet = 0 for data
+   * add GEN jets
    * split photon trigger matching into 2 variables (one for single photon and one for double photon)
    * fix |1/E - 1/p| 
 
