add central rho and new MET filter for miniAOD

--- a/history
+++ b/history
@@ -6,6 +6,8 @@
    * fix missing tau IDs
    * add triggering electron MVA ID
    * add conversion variables 
+   * add b-tag and GEN jet for merged jets
+   * add central rho
 
 * V07-04-09-03
    * add the decision of 5 muon IDs
