--- a/history
+++ b/history
@@ -1,3 +1,8 @@
+* V07-04-16-00
+   * update jets
+   * add histogram for GEN weight
+   * add energy scale correction and smearing for electrons and photons
+
 * V07-04-14-01
    * move to cut based 25ns photon ID
    * add in ES rechits of PF ES clusters in development mode
