update to new MET filters and EGM corrections

--- a/history
+++ b/history
@@ -1,3 +1,8 @@
+* V08-00-11-00
+   * update to 8_0_11
+   * update MET fitlers
+   * update EGM corrections to 7.65/fb of 2016 data
+
 * V08-00-10-00
    * update to 8_0_10
 
