--- a/history
+++ b/history
@@ -1,3 +1,10 @@
+* V08-00-11-01 (in preparation)
+   * remove unused MET uncertainties
+   * remove unused photon PUPPI isolations
+   * run MET correction and uncertainty when using new JES
+   * add gen photons/leptons if it's last copy
+   * change tag version 
+
 * V08-00-11-00
    * update to 8_0_11
    * update MET fitlers
