--- a/history
+++ b/history
@@ -1,5 +1,7 @@
 * V08-00-20-00
    * update to EGM Spring16 electron MVA ID
+   * update to EGM Summer16 electron cut based IDs
+   * add EGM HLT safe electron ID
 
 * V08-00-11-02
    * update jet ID
