--- a/history
+++ b/history
@@ -2,7 +2,8 @@
    * update to EGM Spring16 electron MVA ID
    * update to EGM Summer16 electron cut based IDs
    * add EGM HLT safe electron ID
-
+   * update to V10 JEC
+ 
 * V08-00-11-02
    * update jet ID
    * update the list of triggers
