update to EGM Spring16 photon IDs

--- a/history
+++ b/history
@@ -1,3 +1,6 @@
+*V08-00-22-00
+   * update to EGM Spring16 photon IDs
+
 * V08-00-20-00
    * update to EGM Spring16 electron MVA ID
    * update to EGM Summer16 electron cut based IDs
