--- a/history
+++ b/history
@@ -1,5 +1,6 @@
-*V08-00-22-00
+*V08-00-24-00
    * update to EGM Spring16 photon IDs
+   * update to newest EGM energy corrections
 
 * V08-00-20-00
    * update to EGM Spring16 electron MVA ID
