--- a/history
+++ b/history
@@ -1,6 +1,9 @@
-* V
+* V08-00-26-00
    * add a new variable jetID to store loose and tight jet ID
    * add IP3D variable to electrons and muons
+   * remove unused photon variables for Moriond2017 and add photon seed crystal timing and energy
+   * update jetID
+   * move to HEEP V70 
 
 * V08-00-24-00
    * update to EGM Spring16 photon IDs
