--- a/history
+++ b/history
@@ -1,3 +1,8 @@
+* V08-00-XX-YY
+   * remove ES energy variable
+   * only store the prescales of photon triggers to data
+   * fix the order of prescales of photon triggers
+
 * V08-00-26-00
    * add a new variable jetID to store loose and tight jet ID
    * add IP3D variable to electrons and muons
