--- a/history
+++ b/history
@@ -1,6 +1,7 @@
 * V08-00-26-06
    * add dimuon kinematic fit
    * add ghost muon cleaning variables
+   * add Z kinematic fit
 
 * V08-00-26-05 
    * add muon isolations with cone 0.3
