--- a/history
+++ b/history
@@ -1,3 +1,6 @@
+* 102X
+   * preliminary EGM corrections for 2018
+
 * 94X
    * newest EGM ID and energy correction for 2017 data
    * new JEC for Fall17 MC
