add L1 ECAL prefiring and LHE particles

--- a/history
+++ b/history
@@ -1,5 +1,8 @@
 * 102X
    * preliminary EGM corrections for 2018
+   * new JEC for Autumn18 MC
+   * add L1 ECAL prefiring
+   * add LHE information
 
 * 94X
    * newest EGM ID and energy correction for 2017 data
